--- a/SI Segundo Período/Nodejs e Banco de dados - aula/part03 and part04/package.json
+++ b/SI Segundo Período/Nodejs e Banco de dados - aula/part03 and part04/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^4.5.0",
     "express": "^4.18.2",
-    "prisma": "^4.5.0"
+    "prisma": "^4.5.0",
+    "sqlite3": "^5.1.2"
   }
 }
